--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <article class="well">
         <h4>Лабораторна робота №1</h4> 
         <p>Короткий опис завдання</p>
-        <p><a href="#">Посилання на репозиторій</a></p> 
+        <p><a href="https://github.com/takashixgod/wplab1" target="_blank">Посилання на репозиторій</a></p>  
       </article>
     </div>
     <div class="col-sm-4">
